# patcher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_win-arm.yml  cmake_windows.yml  cmake_woa.yml
LICENSES/: LICENSE_Nuklear
cmake/toolchains/: mingw32-i686.cmake
include/: config.h  gui.h  nuklear.h  util.h
src/: config.cpp  gui.cpp  main.cpp  util.cpp
xx/: tool_woa32.cmake  tool_woa64.cmake
